# RNN-Protein-Secondary-Prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
BI-GRU/: BI_GRU_tf.ipynb
BI-GRU/export/: BI-GRU.history.pkl  BI-GRU.history_times.pkl  history.pkl
BI-LSTM/: BI_LSTM_tf.ipynb
BI-LSTM/export/: BI_LSTM.history.pkl  BI_LSTM.history_times.pkl  history.pkl
GRU/: GRU_tf.ipynb
GRU/export/: GRU.history.pkl  GRU.history_times.pkl  history.pkl
LSTM/: LSTM_tf.ipynb
LSTM/export/: LSTM.history.pkl  LSTM.history_times.pkl  history.pkl
POST/: Post_analysis.ipynb
