[tool.poetry]
name = "nn-protein-proj"
version = "0.1.0"
description = ""
authors = ["Yip Jun Kai <yipjunkai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
torch = "^2.5.0"
keras = "^3.6.0"
tqdm = "^4.66.5"
numpy = "^2.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
